// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 1`] = `
<div
  className="mfui-beta-select mfui-beta-select_no-touch test-class test-root-class"
  data-test="test"
>
  <div
    className="mfui-beta-select__inner"
  >
    <InputLabel
      htmlFor="1"
    >
      test-label
      <span
        className="mfui-beta-select__require-mark"
      >
        *
      </span>
    </InputLabel>
    <div
      className="mfui-beta-select__control test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-beta-select__combobox"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value=""
      />
      <div
        className="mfui-beta-select__arrow-wrap"
        onClick={[Function]}
        tabIndex={1}
      >
        <span
          className="mfui-beta-select__arrow"
        />
      </div>
    </div>
    <div
      className="mfui-beta-select__list"
    >
      <div
        className="mfui-beta-select__list-inner"
      >
        <div
          className="mfui-beta-select__list-item mfui-beta-select__list-item_active"
          key="0_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-beta-select__item-title"
          >
            t
            e
            s
            t
            -
            n
            a
            m
            e
            -
            1
          </div>
        </div>
        <div
          className="mfui-beta-select__list-item"
          key="1_2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-beta-select__item-title"
          >
            t
            e
            s
            t
            -
            n
            a
            m
            e
            -
            2
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-beta-select__text"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 2`] = `
<div
  className="mfui-beta-select mfui-beta-select_no-touch test-class test-root-class"
  data-test="test"
>
  <div
    className="mfui-beta-select__inner"
  >
    <InputLabel
      htmlFor="1"
    >
      test-label
      <span
        className="mfui-beta-select__require-mark"
      >
        *
      </span>
    </InputLabel>
    <div
      className="mfui-beta-select__control test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-beta-select__combobox"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value="test-name-1"
      />
      <div
        className="mfui-beta-select__arrow-wrap"
        onClick={[Function]}
        tabIndex={1}
      >
        <span
          className="mfui-beta-select__arrow"
        />
      </div>
    </div>
    <div
      className="mfui-beta-select__list"
    >
      <div
        className="mfui-beta-select__list-inner"
      >
        <div
          className="mfui-beta-select__list-item mfui-beta-select__list-item_active"
          key="0_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-beta-select__item-title"
          >
            t
            e
            s
            t
            -
            n
            a
            m
            e
            -
            1
          </div>
        </div>
        <div
          className="mfui-beta-select__list-item"
          key="1_2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-beta-select__item-title"
          >
            t
            e
            s
            t
            -
            n
            a
            m
            e
            -
            2
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-beta-select__text"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 3`] = `
<div
  className="mfui-beta-select mfui-beta-select_open mfui-beta-select_no-touch test-class test-root-class"
  data-test="test"
>
  <div
    className="mfui-beta-select__inner"
  >
    <InputLabel
      htmlFor="1"
    >
      test-label
      <span
        className="mfui-beta-select__require-mark"
      >
        *
      </span>
    </InputLabel>
    <div
      className="mfui-beta-select__control test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-beta-select__combobox"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value="test-name-1"
      />
      <div
        className="mfui-beta-select__arrow-wrap"
        onClick={[Function]}
        tabIndex={1}
      >
        <span
          className="mfui-beta-select__arrow"
        />
      </div>
    </div>
    <div
      className="mfui-beta-select__list"
    >
      <div
        className="mfui-beta-select__list-inner"
      >
        <div
          className="mfui-beta-select__list-item mfui-beta-select__list-item_active"
          key="0_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-beta-select__item-title"
          >
            <span
              className="mfui-beta-select__highlighted-fragment"
            >
              test-name-1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-beta-select__text"
  >
    test-notice-text
  </div>
</div>
`;
